syntax = "proto3";


option go_package = "github.com/ostcar/timer/grpc/proto";

service Timer {
    rpc Start(StartRequest) returns (StartResponse);
    rpc Stop(StopRequest) returns (StopResponse);
    rpc List(ListRequest) returns (ListResponse);
    rpc Edit(EditRequest) returns (EditResponse);
}

message StartRequest {
    string comment = 1;
}

message StartResponse {}

message StopRequest {
    string comment = 1;
    bool hasComment = 2;
}

message StopResponse {
    int32 id = 1;
}

message ListRequest {}

message ListResponse {
    repeated Periode periodes = 1;
}

message Periode {
    int32 id = 1;
    int64 start = 2;
    int64 stop = 3;
    string comment = 4;
}

message EditRequest {
    int32 id = 1;
    int64 start = 2;
    int64 stop = 3;
    string comment = 4;
    bool hasStart = 5;
    bool hasStop = 6;
    bool hasComment = 7;
}

message EditResponse {}
